[gd_scene load_steps=14 format=3 uid="uid://cypyv08he7eys"]

[ext_resource type="Script" path="res://Scenes/scrap_treasure.gd" id="1_bp5v4"]
[ext_resource type="PackedScene" uid="uid://bajbk31wmuugm" path="res://Scenes/item_sprites.tscn" id="2_bnupy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vufmf"]
friction = 20.0
rough = true

[sub_resource type="CircleShape2D" id="CircleShape2D_ujyit"]
radius = 32.0

[sub_resource type="Animation" id="Animation_xhmei"]
length = 0.001

[sub_resource type="Animation" id="Animation_w6c0p"]
resource_name = "fade_out"
length = 10.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n0f8c"]
_data = {
"RESET": SubResource("Animation_xhmei"),
"fade_out": SubResource("Animation_w6c0p")
}

[sub_resource type="Animation" id="Animation_nq8ck"]
length = 0.001

[sub_resource type="Animation" id="Animation_plx2k"]
resource_name = "collect"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0b8i"]
_data = {
"RESET": SubResource("Animation_nq8ck"),
"collect": SubResource("Animation_plx2k")
}

[sub_resource type="Animation" id="Animation_hh7b2"]
length = 0.001

[sub_resource type="Animation" id="Animation_8oo1k"]
resource_name = "shine"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13kea"]
_data = {
"RESET": SubResource("Animation_hh7b2"),
"shine": SubResource("Animation_8oo1k")
}

[node name="Scrap_Treasure" type="RigidBody2D" groups=["scrapTreasure"]]
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_vufmf")
gravity_scale = 0.0
inertia = 9.7
script = ExtResource("1_bp5v4")
item_sprite = ExtResource("2_bnupy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ujyit")

[node name="despawn_start" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="fade_out_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n0f8c")
}

[node name="collect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y0b8i")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13kea")
}

[connection signal="timeout" from="despawn_start" to="." method="_on_despawn_start_timeout"]
[connection signal="animation_finished" from="fade_out_player" to="." method="_on_fade_out_player_animation_finished"]
[connection signal="animation_finished" from="collect" to="." method="_on_collect_animation_finished"]
